name:                logtoy
version:             0.1.0.0
synopsis:            A Toy Logging Service
license:             MIT
license-file:        LICENSE
author:              Benjamin Summers
maintainer:          ben@benjaminsummers.net
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable logtoy
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       aeson
                     , attoparsec
                     , base >=4.7 && <4.8
                     , bytestring
                     , conduit
                     , conduit-combinators
                     , conduit-extra
                     , containers
                     , directory
                     , http-types
                     , QuickCheck
                     , servant-server
                     , stm
                     , system-filepath
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , tasty-smallcheck
                     , text
                     , text-format
                     , transformers
                     , unix
                     , vector
                     , wai
                     , warp
                     , warp-tls
                     , primitive
