name:                logtoy
version:             0.1.0.0
synopsis:            A Toy Logging Service
license:             MIT
license-file:        LICENSE
author:              Benjamin Summers
maintainer:          ben@benjaminsummers.net
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable logtoy
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded
  build-depends:       aeson
                     , attoparsec
                     , base >=4.7 && <4.10
                     , bytestring
                     , conduit
                     , conduit-combinators
                     , conduit-extra
                     , containers
                     , deepseq
                     , directory
                     , http-types
                     , primitive
                     , QuickCheck
                     , servant-server
                     , system-filepath
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , text
                     , text-format
                     , unix
                     , vector
                     , wai
                     , warp
